fix(SideNav): Fix positioning of caret for collapsed module
- when the module title is too long

--- a/packages/side-nav/src/CollapseButton/collapse-button.scss
+++ b/packages/side-nav/src/CollapseButton/collapse-button.scss
@@ -3,6 +3,7 @@
 
 .hig__side-nav__module__collapse-button {
   @include vendor-prefix("transform", "rotate(0deg)");
+  height: 100%;
 
   &:hover {
     cursor: pointer;
